# CWindow

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cwindow/: context.h  core.h  input.h  window.h  window_base.h
src/: CMakeLists.txt  context.c  window.c
src/gl_context/wayland/: gl_context.h
src/util/: timer.c  timer.h
src/wayland/: window.c  window.h
test/: CMakeLists.txt  test.c
